lecturer front done

--- a/front end/lecturer.html
+++ b/front end/lecturer.html
@@ -7,37 +7,56 @@
   <title>Lecturer Page</title>
 </head>
 <body>
-  <body>
-    <header>
-        <h1>Lecturer Lecturer</h1>
-    </header>
-
-    <section id="lecturer-info">
-        <h2>Lecturer Information</h2>
-        <table border="1">
-            <tr>
-                <th>Lecturer Name</th>
-                <th>Last Name</th>
-                <th>Teaching License</th>
-                <th>Subject Taught</th>
-            </tr>
-        </table>
-    </section>
-
-    <section id="student-info">
-        <h2>Student Information</h2>
-        <table border="1">
-            <tr>
-                <th>Student ID</th>
-                <th>Student Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>Phone Number</th>
-                <th>Home Assignment Score</th>
-                <th>Quizzes Score</th>
-                <th>Exam Score</th>
-            </tr>
-        </table>
-    </section>
+    <h1>Lecturer: Wolfgang Paul</h1>
+    <h2>Information</h2>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Subject</th>
+            <th>Teaching License Information</th>
+        </tr>
+        <tr>
+            <td>Wolfgang</td>
+            <td>Paul</td>
+            <td>Physics</td>
+            <td>Lic#123456</td>
+        </tr>
+    </table>
+    
+    <h2>Students</h2>
+    <table>
+        <tr>
+            <th>Student ID</th>
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Date of Birth</th>
+            <th>Email</th>
+            <th>Home Assignment Score</th>
+            <th>Quiz Score</th>
+            <th>Exam Score</th>
+        </tr>
+        <tr>
+            <td>101</td>
+            <td>Davit</td>
+            <td>Maisuradze</td>
+            <td>1995-01-15</td>
+            <td>Davit.maisuradze@example.com</td>
+            <td><input type="text" name="home_assignment_score" value="85"></td>
+            <td><input type="text" name="quiz_score" value="90"></td>
+            <td><input type="text" name="exam_score" value="75"></td>
+        </tr>
+        <tr>
+            <td>102</td>
+            <td>Jane</td>
+            <td>Smith</td>
+            <td>1996-03-20</td>
+            <td>jane.smith@example.com</td>
+            <td><input type="text" name="home_assignment_score" value="92"></td>
+            <td><input type="text" name="quiz_score" value="88"></td>
+            <td><input type="text" name="exam_score" value="80"></td>
+        </tr>
+        <!-- Add more students here as needed -->
+    </table>
 </body>
 </html>
