--- a/front end/lecturer.html
+++ b/front end/lecturer.html
@@ -1,62 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="lecturer.css">
-  <title>Lecturer Page</title>
+    <meta charset="ISO-8859-1">
+    <title>Lecturer Page</title>
+    <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 </head>
 <body>
-    <h1>Lecturer: Wolfgang Paul</h1>
-    <h2>Information</h2>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Last Name</th>
-            <th>Subject</th>
-            <th>Teaching License Information</th>
-        </tr>
-        <tr>
-            <td>Wolfgang</td>
-            <td>Paul</td>
-            <td>Physics</td>
-            <td>Lic#123456</td>
-        </tr>
-    </table>
-    
-    <h2>Students</h2>
-    <table>
-        <tr>
-            <th>Student ID</th>
-            <th>Name</th>
-            <th>Last Name</th>
-            <th>Date of Birth</th>
-            <th>Email</th>
-            <th>Home Assignment Score</th>
-            <th>Quiz Score</th>
-            <th>Exam Score</th>
-        </tr>
-        <tr>
-            <td>101</td>
-            <td>Davit</td>
-            <td>Maisuradze</td>
-            <td>1995-01-15</td>
-            <td>Davit.maisuradze@example.com</td>
-            <td><input type="text" name="home_assignment_score" value="85"></td>
-            <td><input type="text" name="quiz_score" value="90"></td>
-            <td><input type="text" name="exam_score" value="75"></td>
-        </tr>
-        <tr>
-            <td>102</td>
-            <td>Jane</td>
-            <td>Smith</td>
-            <td>1996-03-20</td>
-            <td>jane.smith@example.com</td>
-            <td><input type="text" name="home_assignment_score" value="92"></td>
-            <td><input type="text" name="quiz_score" value="88"></td>
-            <td><input type="text" name="exam_score" value="80"></td>
-        </tr>
-        <!-- Add more students here as needed -->
-    </table>
+    <div class="container">
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+                <tr>
+                    <th> Name</th>
+                    <th> Last Name</th>
+                    <th> Subject</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Wolfgang</td>
+                    <td>Paul</td>
+                    <td>Operating Systems</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="row">
+            <h1> Student List </h1>
+        </div>
+
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+                <tr>
+                    <th> Student ID</th>
+                    <th> Student First Name</th>
+                    <th> Student Last Name</th>
+                    <th> Student Email </th>
+                    <th> GPA</th>
+                    <th> Home Assignment</th>
+                    <th> Quiz</th>
+                    <th> Exam</th>
+                    <th> Actions </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="student: ${students}">
+                    <td th:text="${student.id}"></td>
+                    <td th:text="${student.firstName}"></td>
+                    <td th:text="${student.lastName}"></td>
+                    <td th:text="${student.email}"></td>
+                    <td th:text="${student.gpa}"></td>
+                    <td th:text="${student.homeassignment}"></td>
+                    <td th:text="${student.quiz}"></td>
+                    <td th:text="${student.exam}"></td>
+                    <td>
+                        <a th:href="@{/students/edit/{id}(id=${student.id})}"
+                            class="btn btn-primary">Update</a>
+                        <a th:href="@{/students/{id}(id=${student.id})}"
+                            class="btn btn-danger">Delete</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
